# academyops-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app_runner.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
.kiro/specs/wp-08-intent-classification/: .config.kiro  requirements.md
.kiro/specs/wp08-intent-classification/: design.md  requirements.md
alembic/: env.py
alembic/versions/: 107785c425e3_add_role_to_users.py  37f7f0b7f31d_initial_schema.py
data/: messy_leads.csv  quarantine.csv
frontend/: index.html  logout.html
frontend/css/: style.css
frontend/js/: ab_test.js  api.js  app.js  copilot.js  crud.js  dashboard.js  kanban.js  metrics.js  shared.js  team.js  triage.js
notebooks/: analytics.ipynb
scripts/: analytics.py  evaluate_classifier.py  import_leads.py  init_db.py  seed_analytics.py  seed_db.py
src/: cli.py  database.py  exceptions.py  logging_config.py  schemas.py
src/api/: app.py  crud.py  dependencies.py  routes.py
src/classifier/: engine.py
src/dashboard/: app.py
src/database/: connections.py  schemas.py
src/models/: errors.py  lead.py  user.py
src/repository/: lead_repository.py
src/schemas/: lead.py  message.py  user.py
src/services/: copilot.py
src/utils/: auth.py  cleansing.py  logger.py
src/web/: app.py  routes.py  validators.py
tests/: conftest.py  test_api.py  test_auth.py  test_classifier.py  test_crud.py  test_repository.py  test_users_admin.py
